--- a/css/main.css
+++ b/css/main.css
@@ -1822,7 +1822,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff403b;
+  background: #df28da;
 }
 .links-of-blogroll {
   font-size: 13px;
