--- a/css/main.css
+++ b/css/main.css
@@ -1959,7 +1959,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #fef0b6;
+  background: #de4eff;
 }
 .links-of-blogroll {
   font-size: 13px;
