--- a/css/main.css
+++ b/css/main.css
@@ -1959,7 +1959,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #571d41;
+  background: #63cba7;
 }
 .links-of-blogroll {
   font-size: 13px;
